🐁📔 Updated with Glitch

--- a/public/Doodle.html
+++ b/public/Doodle.html
@@ -11,5 +11,5 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <iframe src="https://cdn.gamesnacks.com/omnomrun1/gameCode/index.html"  style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" scrolling="no"><p>Your browser does not support iframes.</p></iframe>
+    <iframe src="https://doodlejump.io"  style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" scrolling="no"><p>Your browser does not support iframes.</p></iframe>
   </body></html>
