--- a/public/games.html
+++ b/public/games.html
@@ -127,7 +127,7 @@ Animations
 <div class="topnav">
   <a href="/">Home</a>
   <a class="active" href="/games.html">Games</a>
-  <a href="https://mathpracticeisfun.glitch.me/web/_aHR0cHM6Ly9wbGF5Y2xhc3NpYy5nYW1lcw==_/">DosBox!</a>
+  <a href="https://forms.gle/ANsxzp3SfwpAsU7h6">Suggest A Game</a>
 </div>
 
 
@@ -185,6 +185,7 @@ body {
         <!--Image Gallery Begins-->
 		<div id="Images">
         	<ul>
+                <li><a href="/Doodle.html"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcookie-clicker.co%2Fupload%2Fcache%2Fupload%2Fimgs%2Fdoodle-jump-m233x233.png&f=1&nofb=1" alt="Doodle Jump" height="150px" width="150px"/></a></li>
                 <li><a href="/striker.html"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs.luyengame.net%2Fgames%2Fstriker-dummies%2F9b0918906e08778f1a0e0ea2008cdd3d.jpg&f=1&nofb=1" alt="striker dummies" height="150px" width="150px"/></a></li>
                 <li><a href="/csgo.html"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Flogos-download.com%2Fwp-content%2Fuploads%2F2016%2F04%2FCSGO_logo.png&f=1&nofb=1" alt="csgo" height="150px" width="150px"/></a></li>
                 <li><a href="/haven.html"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg.itch.zone%2FaW1nLzg0ODYwMTQucG5n%2Foriginal%2FoWAdMX.png&f=1&nofb=1" alt="havendock" height="150px" width="150px"/></a></li>
@@ -248,7 +249,7 @@ body {
                 <li><a href="/subway.html"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg.gamemonetize.com%2Funimohy4thjwn5pf2vcogedhujcu9759%2F512x512.jpg&f=1&nofb=1" alt="subway surfers monaco" height="150x" width="150x"/></a></li>
                 <li><a href="/AdvanceWars.html"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn11.bigcommerce.com%2Fs-ymgqt%2Fimages%2Fstencil%2F1280x1280%2Fproducts%2F27477%2F18554%2FGame-GBAdvance-Awars-2__76423.1394739672.jpg%3Fc%3D2%26imbypass%3Don&f=1&nofb=1" alt="AdvanceWars" height="150px" width="150px" "/></a></li>
                 <li><a href="/goldensun.html"><img src="https://duckduckgo.com/i/46f44e55.jpg" alt="GoldenSun" height="150px" width="150px"/></a></li>
-                <li><a href="/vivid.html"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/66/Cut_the_Rope_%28App_icon%29.png/220px-Cut_the_Rope_%28App_icon%29.png" alt="Cut The Rope" height="150px" width="150px" "/></a></li>
+                <li><a href="/Cut-the-Rope-Vivid-Edition"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/66/Cut_the_Rope_%28App_icon%29.png/220px-Cut_the_Rope_%28App_icon%29.png" alt="Cut The Rope" height="150px" width="150px" "/></a></li>
             </ul>
         <!--Image Gallery Ends-->   
         </div>
